--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                 <div class="logo">
                     <h1>Opti<span>Core</span></h1>
                 </div>
-                <button class="dot-btn" aria-label="Dot button"><i class="fas fa-circle"></i></button>
+                <ul class="nav-links">
+                    <li><a href="index.html#team">Team</a></li>
+                    <li><a href="index.html#strengths">Strengths</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
                 <div class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
                     <i class="fas fa-moon"></i>
                 </div>
@@ -384,7 +389,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 OptiCore. All rights reserved.</p>
+                <p>&copy; 2025 OptiCore. All rights reserved.</p>
             </div>
         </div>
     </footer>
