--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
             <div class="contact-container">
                 <div class="contact-form">
-                    <form>
+                    <form id="contact-form">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" required>
@@ -332,6 +332,8 @@
                             <textarea id="message" name="message" rows="4" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
+                        <a class="btn whatsapp-btn" href="https://wa.me/919967261911?text=Hi%20OptiCore%20team,%20I%27d%20like%20to%20talk%20about%20your%20services." target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                        <p class="form-status" aria-live="polite"></p>
                     </form>
                 </div>
                 <div class="contact-info">
