Add LeadConnector webchat widget to homepage\n\n- Insert <chat-widget> with location-id\n- Load LeadConnector loader.js and resources URL\n- Verified locally with no browser errors

--- a/index.html
+++ b/index.html
@@ -448,5 +448,8 @@
             updateAuthUI();
         });
     </script>
+    <!-- LeadConnector Chat Widget -->
+    <chat-widget location-id="XcaA33bQpHsTTPTL3rnp"></chat-widget>
+    <script src="https://widgets.leadconnectorhq.com/loader.js" data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js"></script>
 </body>
 </html>
