cookie-policy.html

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -39,7 +39,7 @@
             <div class="section-header">
                 <h2>Cookie Policy</h2>
                 <div class="underline"></div>
-                <p class="section-subheading">Last Updated: June 2023</p>
+                <p class="section-subheading">Last Updated: Oct 2025</p>
             </div>
             
             <div class="legal-content">
@@ -74,8 +74,8 @@
                 <h3>6. More Information</h3>
                 <p>If you are still looking for more information, you can contact us through one of our preferred contact methods:</p>
                 <p>Email: privacy@opticore.agency<br>
-                Phone: +1 (555) 123-4567<br>
-                Address: 123 Innovation Drive, Tech City</p>
+                Phone: +91 (8928800538)<br>
+                Address: Thane west,Maharashtra,India</p>
             </div>
         </div>
     </section>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 OptiCore. All rights reserved.</p>
+                <p>&copy; 2025 OptiCore. All rights reserved.</p>
             </div>
         </div>
     </footer>
