Revert "Add SVG logo fallback and prefer it over ICO; update header/footer markup"
This reverts commit 45213a1176182fd09fc67892cafa5675de1a7768.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
                 <div class="logo">
                     <a href="#home" class="brand" aria-label="OptiCore AI home">
                         <img src="assets/OptiCoreai.jpg" alt="OptiCore AI logo" class="brand-logo">
-                        <!-- Prefer SVG (sharp), fall back to ICO -->
-                        <picture class="brand-picture">
-                            <source srcset="assets/OptiCore.svg" type="image/svg+xml">
-                            <img src="assets/OptiCore.ico" alt="OptiCore logo" class="brand-ico">
-                        </picture>
+                        <!-- Replaced textual brand with ICO logo as requested -->
+                        <img src="assets/OptiCore.ico" alt="OptiCore logo" class="brand-ico">
                     </a>
                 </div>
                 <ul class="nav-links">
@@ -378,10 +375,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <picture>
-                        <source srcset="assets/OptiCore.svg" type="image/svg+xml">
-                        <img src="assets/OptiCore.ico" alt="OptiCore logo" class="footer-logo-img">
-                    </picture>
+                    <img src="assets/OptiCore.ico" alt="OptiCore logo" class="footer-logo-img">
                     <p>AI Automation & Marketing Agency</p>
                 </div>
                 <div class="footer-links">
